--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: gcl的漫漫前端路
 subtitle:
 description:
 keywords:
-author: John Doe
+author: gcl chang
 language:
 timezone:
 
