--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+#theme: landscape
 #theme: ace
-#theme: next
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
